@@ -402,7 +402,7 @@ private:
 };
 
 /**
- * Scale into (SCALE_INTO) modification. (Uses nearest neighbor.)
+ * Scale into (SCALE_INTO) modification. (Uses bilinear interpolation.)
  * Preserves aspect ratio.
  */
 class scale_into_modification : public modification
@@ -419,6 +419,23 @@ private:
 	int w_, h_;
 };
 
+/**
+ * Scale into (SCALE_INTO_SHARP) modification. (Uses nearest neighbor.)
+ * Preserves aspect ratio.
+ */
+class scale_into_sharp_modification : public modification
+{
+public:
+	scale_into_sharp_modification(int width, int height)
+		: w_(width), h_(height)
+	{}
+	virtual surface operator()(const surface& src) const;
+	int get_w() const;
+	int get_h() const;
+
+private:
+	int w_, h_;
+};
 
 /**
  * xBRZ scale (xBRZ) modification
